# survey_generator_ecml_pkdd

./: .gitignore  README.md  pyproject.toml
resources/: CITIZENSW1.csv  CITIZENSW2.csv  CITIZENS_W1_W2.csv  PARENTSW1.csv  PARENTSW2.csv
survey_generator/: main.py
survey_generator/data/: data.py  warsaw_survey_generator.py
survey_generator/semisupervised/: stream.py
survey_generator/survey/: generator.py
